fix height image on mobile - work in progress

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,7 +54,7 @@ section {
   // }
 
   .photo {
-    max-height: 80vh;
+    // max-height: 80vh;
     width: auto;
     max-height: 600px;
     border: 1px solid white;
